fix notes swagger
