# docs/swagger.json
@@ -370,11 +370,11 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Notebooks",
+                        "description": "Notes",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/domain.GetAllNotesResponse"
+                                "$ref": "#/definitions/docs.GetAllNotesResponse"
                             }
                         }
                     },
@@ -717,6 +717,37 @@
                 }
             }
         },
+        "docs.GetAllNotesResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "notes": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "body": {
+                                "type": "string"
+                            },
+                            "created_at": {
+                                "type": "string"
+                            },
+                            "id": {
+                                "type": "integer"
+                            },
+                            "title": {
+                                "type": "string"
+                            },
+                            "updated_at": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "docs.MessageResponse": {
             "type": "object",
             "properties": {
@@ -828,20 +859,6 @@
                 }
             }
         },
-        "domain.GetAllNotesResponse": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "notes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.Note"
-                    }
-                }
-            }
-        },
         "domain.GetUserDTO": {
             "type": "object",
             "properties": {
@@ -872,32 +889,6 @@
             "properties": {
                 "refresh_token": {
                     "type": "string"
-                }
-            }
-        },
-        "domain.Note": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "notebook_id": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         }
